Update JSON library