@@ -1,31 +1,33 @@
 package org.json;
 
 import java.io.IOException;
-import java.io.Writer;
+import java.math.BigDecimal;
+import java.util.Collection;
+import java.util.Map;
 
 /*
- Copyright (c) 2006 JSON.org
+Copyright (c) 2006 JSON.org
 
- Permission is hereby granted, free of charge, to any person obtaining a copy
- of this software and associated documentation files (the "Software"), to deal
- in the Software without restriction, including without limitation the rights
- to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- copies of the Software, and to permit persons to whom the Software is
- furnished to do so, subject to the following conditions:
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
 
- The above copyright notice and this permission notice shall be included in all
- copies or substantial portions of the Software.
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
 
- The Software shall be used for Good, not Evil.
+The Software shall be used for Good, not Evil.
 
- THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- SOFTWARE.
- */
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+*/
 
 /**
  * JSONWriter provides a quick and convenient way of producing JSON text. The
@@ -42,7 +44,7 @@ import java.io.Writer;
  * example,
  * 
  * <pre>
- * new JSONWriter(myWriter).object().key(&quot;JSON&quot;).value(&quot;Hello, World!&quot;).endObject();
+ * new JSONWriter(myWriter).object().key("JSON").value("Hello, World!").endObject();
  * </pre>
  * 
  * which writes
@@ -53,12 +55,12 @@ import java.io.Writer;
  * <p>
  * The first method called must be <code>array</code> or <code>object</code>.
  * There are no methods for adding commas or colons. JSONWriter adds them for
- * you. Objects and arrays can be nested up to 20 levels deep.
+ * you. Objects and arrays can be nested up to 200 levels deep.
  * <p>
  * This can sometimes be easier than using a JSONObject to build a string.
  * 
  * @author JSON.org
- * @version 2011-11-24
+ * @version 2016-08-08
  */
 public class JSONWriter {
 	private static final int maxdepth = 200;
@@ -87,12 +89,12 @@ public class JSONWriter {
 	/**
 	 * The writer that will receive the output.
 	 */
-	protected Writer writer;
+	protected Appendable writer;
 
 	/**
 	 * Make a fresh JSONWriter. It can be used to build one JSON text.
 	 */
-	public JSONWriter(Writer w) {
+	public JSONWriter(Appendable w) {
 		this.comma = false;
 		this.mode = 'i';
 		this.stack = new JSONObject[maxdepth];
@@ -114,10 +116,13 @@ public class JSONWriter {
 		if (this.mode == 'o' || this.mode == 'a') {
 			try {
 				if (this.comma && this.mode == 'a') {
-					this.writer.write(',');
+					this.writer.append(',');
 				}
-				this.writer.write(string);
+				this.writer.append(string);
 			} catch (IOException e) {
+				// Android as of API 25 does not support this exception constructor
+				// however we won't worry about it. If an exception is happening here
+				// it will just throw a "Method not found" exception instead.
 				throw new JSONException(e);
 			}
 			if (this.mode == 'o') {
@@ -152,19 +157,22 @@ public class JSONWriter {
 	/**
 	 * End something.
 	 * 
-	 * @param mode Mode
-	 * @param c    Closing character
+	 * @param m Mode
+	 * @param c Closing character
 	 * @return this
 	 * @throws JSONException If unbalanced.
 	 */
-	private JSONWriter end(char mode, char c) throws JSONException {
-		if (this.mode != mode) {
-			throw new JSONException(mode == 'a' ? "Misplaced endArray." : "Misplaced endObject.");
+	private JSONWriter end(char m, char c) throws JSONException {
+		if (this.mode != m) {
+			throw new JSONException(m == 'a' ? "Misplaced endArray." : "Misplaced endObject.");
 		}
-		this.pop(mode);
+		this.pop(m);
 		try {
-			this.writer.write(c);
+			this.writer.append(c);
 		} catch (IOException e) {
+			// Android as of API 25 does not support this exception constructor
+			// however we won't worry about it. If an exception is happening here
+			// it will just throw a "Method not found" exception instead.
 			throw new JSONException(e);
 		}
 		this.comma = true;
@@ -208,16 +216,24 @@ public class JSONWriter {
 		}
 		if (this.mode == 'k') {
 			try {
-				this.stack[this.top - 1].putOnce(string, Boolean.TRUE);
-				if (this.comma) {
-					this.writer.write(',');
+				JSONObject topObject = this.stack[this.top - 1];
+				// don't use the built in putOnce method to maintain Android support
+				if (topObject.has(string)) {
+					throw new JSONException("Duplicate key \"" + string + "\"");
 				}
-				this.writer.write(JSONObject.quote(string));
-				this.writer.write(':');
+				topObject.put(string, true);
+				if (this.comma) {
+					this.writer.append(',');
+				}
+				this.writer.append(JSONObject.quote(string));
+				this.writer.append(':');
 				this.comma = false;
 				this.mode = 'o';
 				return this;
 			} catch (IOException e) {
+				// Android as of API 25 does not support this exception constructor
+				// however we won't worry about it. If an exception is happening here
+				// it will just throw a "Method not found" exception instead.
 				throw new JSONException(e);
 			}
 		}
@@ -269,7 +285,7 @@ public class JSONWriter {
 	/**
 	 * Push an array or object scope.
 	 * 
-	 * @param c The scope to open.
+	 * @param jo The scope to open.
 	 * @throws JSONException If nesting is too deep.
 	 */
 	private void push(JSONObject jo) throws JSONException {
@@ -282,7 +298,78 @@ public class JSONWriter {
 	}
 
 	/**
-	 * Append either the value <code>true</code> or the value <code>false</code> .
+	 * Make a JSON text of an Object value. If the object has an
+	 * value.toJSONString() method, then that method will be used to produce the
+	 * JSON text. The method is required to produce a strictly conforming text. If
+	 * the object does not contain a toJSONString method (which is the most common
+	 * case), then a text will be produced by other means. If the value is an array
+	 * or Collection, then a JSONArray will be made from it and its toJSONString
+	 * method will be called. If the value is a MAP, then a JSONObject will be made
+	 * from it and its toJSONString method will be called. Otherwise, the value's
+	 * toString method will be called, and the result will be quoted.
+	 *
+	 * <p>
+	 * Warning: This method assumes that the data structure is acyclical.
+	 *
+	 * @param value The value to be serialized.
+	 * @return a printable, displayable, transmittable representation of the object,
+	 *         beginning with <code>{</code>&nbsp;<small>(left brace)</small> and
+	 *         ending with <code>}</code>&nbsp;<small>(right brace)</small>.
+	 * @throws JSONException If the value is or contains an invalid number.
+	 */
+	public static String valueToString(Object value) throws JSONException {
+		if (value == null || value.equals(null)) {
+			return "null";
+		}
+		if (value instanceof JSONString) {
+			Object object;
+			try {
+				object = ((JSONString) value).toJSONString();
+			} catch (Exception e) {
+				throw new JSONException(e);
+			}
+			if (object instanceof String) {
+				return (String) object;
+			}
+			throw new JSONException("Bad value from toJSONString: " + object);
+		}
+		if (value instanceof Number) {
+			// not all Numbers may match actual JSON Numbers. i.e. Fractions or Complex
+			final String numberAsString = JSONObject.numberToString((Number) value);
+			try {
+				// Use the BigDecimal constructor for it's parser to validate the format.
+				@SuppressWarnings("unused")
+				BigDecimal unused = new BigDecimal(numberAsString);
+				// Close enough to a JSON number that we will return it unquoted
+				return numberAsString;
+			} catch (NumberFormatException ex) {
+				// The Number value is not a valid JSON number.
+				// Instead we will quote it as a string
+				return JSONObject.quote(numberAsString);
+			}
+		}
+		if (value instanceof Boolean || value instanceof JSONObject || value instanceof JSONArray) {
+			return value.toString();
+		}
+		if (value instanceof Map) {
+			Map<?, ?> map = (Map<?, ?>) value;
+			return new JSONObject(map).toString();
+		}
+		if (value instanceof Collection) {
+			Collection<?> coll = (Collection<?>) value;
+			return new JSONArray(coll).toString();
+		}
+		if (value.getClass().isArray()) {
+			return new JSONArray(value).toString();
+		}
+		if (value instanceof Enum<?>) {
+			return JSONObject.quote(((Enum<?>) value).name());
+		}
+		return JSONObject.quote(value.toString());
+	}
+
+	/**
+	 * Append either the value <code>true</code> or the value <code>false</code>.
 	 * 
 	 * @param b A boolean.
 	 * @return this
@@ -300,7 +387,7 @@ public class JSONWriter {
 	 * @throws JSONException If the number is not finite.
 	 */
 	public JSONWriter value(double d) throws JSONException {
-		return this.value(new Double(d));
+		return this.value(Double.valueOf(d));
 	}
 
 	/**
@@ -324,6 +411,6 @@ public class JSONWriter {
 	 * @throws JSONException If the value is out of sequence.
 	 */
 	public JSONWriter value(Object object) throws JSONException {
-		return this.append(JSONObject.valueToString(object));
+		return this.append(valueToString(object));
 	}
 }
